--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 .container {
     display: flex;
     flex-direction: row;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 /*--------------- Alpaca Frame ------------------*/
@@ -78,28 +78,32 @@ body {
 
 /*--------------- Alpaca Ear Buttons ------------------*/
 
-.buttons {
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    flex-direction: column;
-    align-content: center;
-}
-
-.ear-button-container {
-    margin-left: 20px;
+.category-title {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.ear-buttons {
+.category-buttons {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    width: 800px;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.category-buttons-list {
+    display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
+
+.feature-buttons {
+    display: flex;
+}
+
+
 
 /*--------------- Button Designs ------------------*/
 
@@ -120,4 +124,9 @@ button {
 button:hover {
     background-color: lightblue;
     color: black;
+  }
+
+  .randomize {
+      margin-left: 50px;
+      width: 600px;
   }
