--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,14 @@ body {
     display: flex;
     flex-direction: row;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 /*--------------- Alpaca Frame ------------------*/
 
 .alpaca-frame {
-    width: 600px;
-    height: 600px;
+    width: 500px;
+    height: 500px;
     margin-top: 50px;
     margin-left: 50px;
     position: relative;
@@ -76,7 +77,7 @@ body {
     top: 0;
 }
 
-/*--------------- Alpaca Ear Buttons ------------------*/
+/*--------------- Alpaca Buttons ------------------*/
 
 .category-title {
     display: flex;
@@ -101,6 +102,25 @@ body {
 
 .feature-buttons {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+    width: 800px;
+    flex-wrap: wrap;
+}
+
+.features {
+    display: flex;
+    flex-wrap: wrap;
+    width: 800px;
+    align-items: center;
+    justify-content: center;
+}
+
+.feature-buttons h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -116,9 +136,11 @@ button {
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    border-radius: 5px;
+    border-radius: 40px;
     margin-right: 20px;
     margin-top: 20px;
+    width: 150px;
+    height: 60px;
   }
   
 button:hover {
@@ -128,5 +150,5 @@ button:hover {
 
   .randomize {
       margin-left: 50px;
-      width: 600px;
+      width: 500px;
   }
